<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".Login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        app:cardBackgroundColor="@color/white"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="30dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/bgcolor"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="12dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_email_24"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                android:padding="8dp"
                android:textColor="@color/black"

                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="12dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/baseline_account_circle_24"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="3dp"
                android:background="@drawable/button_background"
                android:text="@string/login1"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up1"
                android:textColor="@color/black"
                android:textAlignment="center"

                android:padding="10dp"
                android:layout_margin="6dp"/>



        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>