<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".SignUp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="334dp"
        android:layout_margin="30dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/custom_edittext"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_task_management_system"
                android:textAlignment="center"
                android:textColor="@color/bgcolor"
                android:textSize="25dp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_background"
                android:paddingEnd="2dp"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/button_background"
                android:paddingEnd="2dp"
                android:text="@string/login_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>